--- a/index.html
+++ b/index.html
@@ -390,14 +390,37 @@
               <div class="portfolio-content h-100">
                 <img src="assets/img/Ahsan/portfolio/Screenshot 2024-07-03 153427.png" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>Primeliste</h4>
+                  <h4>Primeliste Website</h4>
                   <p>PRIMELISTE Move Faster (Property management)</p>
-                  <a href="assets/img/Ahsan/portfolio/Primeliste - staging.primeliste.com.png" target="_blank" title="App 1" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="assets/img/Ahsan/portfolio/Primeliste - staging.primeliste.com.png" target="_blank" title="Show large" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="https://staging.primeliste.com/" target="_blank" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
 
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
+              <div class="portfolio-content h-100">
+                <img src="assets/img/Ahsan/portfolio/primeadmin.png" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>Primeliste Admin Panel</h4>
+                  <p>(Property management)</p>
+                  <a href="assets/img/Ahsan/portfolio/admindash.png" target="_blank" title="Show large" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="https://staging.primeliste.com/admin" target="_blank" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                </div>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
+              <div class="portfolio-content h-100">
+                <img src="assets/img/Ahsan/portfolio/admin.png" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>Admin Panel</h4>
+                  <p>Localhost project (My Demo Project)</p>
+                  <a href="assets/img/Ahsan/portfolio/Department - Eazisols - localhost.png" target="_blank" title="Show large" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <!-- <a href="https://localhost:44345/" target="_blank" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a> -->
+                </div>
+              </div>
+            </div><!-- End Portfolio Item -->
   
           </div><!-- End Portfolio Container -->
 
@@ -483,7 +506,7 @@
     </section><!-- /Services Section -->
 
     <!-- Contact Section -->
-    <section id="contact" class="contact section">
+    <section id="contact" class="contact section" > 
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
