--- a/index.html
+++ b/index.html
@@ -421,6 +421,18 @@
               </div>
             </div><!-- End Portfolio Item -->
   
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
+              <div class="portfolio-content h-100">
+                <img src="assets/img/Ahsan/portfolio/Screenshot 2024-07-04 180544.png" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>Angular + ASP.NET</h4>
+                  <p>Theme Integration + CRUD using API's + MUI Icon + observable + Service + Auth </p>
+                  <a href="assets/img/Ahsan/portfolio/FireShot Capture 009 - ThemeIntegartion - localhost.png" target="_blank" title="Show large" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <!-- <a href="https://localhost:44345/" target="_blank" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a> -->
+                </div>
+              </div>
+            </div><!-- End Portfolio Item -->
+
           </div><!-- End Portfolio Container -->
 
         </div>
