--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@
 
           <div class="col-lg-6">
 
-            <div class="info-wrap">
+            <div class="info-wrap rounded-2">
               <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="200">
                 <i class="bi bi-geo-alt flex-shrink-0"></i>
                 <div>
@@ -560,9 +560,9 @@
             </div>
             
           </div>
-          <div class="col-lg-6"> 
+          <div class="col-lg-6 rounded-2"> 
               
-            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d74.3487197!3d31.4569214!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3919068c3fa669c5%3A0x2041b35ec3d4d354!2sGhazi+Chowk+Metrobus+Station!5e0!3m2!1s1tjz6bhh!2s1tjz6bhh!4vyour-version" width="500" height="323" frameborder="0" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d74.3487197!3d31.4569214!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3919068c3fa669c5%3A0x2041b35ec3d4d354!2sGhazi+Chowk+Metrobus+Station!5e0!3m2!1s1tjz6bhh!2s1tjz6bhh!4vyour-version" width="500" height="323" frameborder="0" style="border:0;" allowfullscreen="" class="rounded-2"></iframe>
           </div>
 
           <!-- <div class="col-lg-7">
