new project add

--- a/index.html
+++ b/index.html
@@ -411,16 +411,16 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <div class="portfolio-content h-100">
-                <img src="assets/img/Ahsan/portfolio/admin.png" class="img-fluid" alt="">
+                <img src="assets/img/Ahsan/portfolio/endpedocidebanner.png" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>Admin Panel</h4>
-                  <p>Localhost project (My Demo Project)</p>
-                  <a href="assets/img/Ahsan/portfolio/Department - Eazisols - localhost.png" target="_blank" title="Show large" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <!-- <a href="https://localhost:44345/" target="_blank" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a> -->
+                  <h4>EndPedocide Web</h4>
+                  <p>React + Vite (Front-End)</p>
+                  <a href="assets/img/Ahsan/portfolio/endpedocide.png" target="_blank" title="Show large" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="https://end-pedocide.vercel.app/" target="_blank" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
-  
+
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <div class="portfolio-content h-100">
                 <img src="assets/img/Ahsan/portfolio/Screenshot 2024-07-04 180544.png" class="img-fluid" alt="">
@@ -432,6 +432,20 @@
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
+              <div class="portfolio-content h-100">
+                <img src="assets/img/Ahsan/portfolio/admin.png" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>Admin Panel</h4>
+                  <p>Localhost project (My Demo Project)</p>
+                  <a href="assets/img/Ahsan/portfolio/Department - Eazisols - localhost.png" target="_blank" title="Show large" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <!-- <a href="https://localhost:44345/" target="_blank" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a> -->
+                </div>
+              </div>
+            </div><!-- End Portfolio Item -->
+  
+            
 
           </div><!-- End Portfolio Container -->
 
