--- a/index.html
+++ b/index.html
@@ -63,6 +63,10 @@
         <li><a href="#services"><i class="bi bi-hdd-stack navicon"></i> Services</a></li>
         <li><a href="#contact"><i class="bi bi-envelope navicon"></i> Contact</a></li>
       </ul>
+
+      <Ul>
+        <li class="bg-warning text-center rounded-2">Last Update: 26 August 2024</li>
+      </Ul>
     </nav>
 
   </header>
@@ -87,7 +91,11 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>About</h2>
-        <p>I am a dedicated and motivated ASP.NET developer with one year of hands-on experience. In my intensive journey as an ASP.NET developer, I've gained a strong grasp of web application development using the ASP.NET framework, React and Angular. I'm passionate about continuously expanding my skill set and working collaboratively to create robust and user-friendly web applications. My experience has equipped me with the ability to work with technologies such as MVC, MVC EF, MVC Core, SQL Server, C#, HTML, CSS, jQuery, Ajax, JavaScript, React, and Angular. I'm enthusiastic about contributing to dynamic development projects and eager to learn and grow in the field of web development.</p>
+        <p>Highly motivated and dedicated .NET developer, hands-on experience in creating robust and user-friendly web applications using the .NET framework. Proficient in:
+          ASP.NET (MVC, MVC EF, MVC Core, Web API, Razor Pages)
+          Programming languages: C, C++, C#, OPP
+          Databases: MS SQL Server
+          Front-end technologies: HTML, CSS, jQuery, Ajax, JavaScript, React, Angular</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -142,7 +150,7 @@
           <div class="col-lg-3 col-md-6">
             <div class="stats-item">
               <i class="bi bi-emoji-smile"></i>
-              <span data-purecounter-start="0" data-purecounter-end="3" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="4" data-purecounter-duration="1" class="purecounter"></span>
               <p><strong>Happy Clients</strong></p>
             </div>
           </div><!-- End Stats Item -->
@@ -150,7 +158,7 @@
           <div class="col-lg-3 col-md-6">
             <div class="stats-item">
               <i class="bi bi-journal-richtext"></i>
-              <span data-purecounter-start="0" data-purecounter-end="3" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="4" data-purecounter-duration="1" class="purecounter"></span>
               <p><strong>Projects</strong></p>
             </div>
           </div><!-- End Stats Item -->
@@ -158,7 +166,7 @@
           <div class="col-lg-3 col-md-6">
             <div class="stats-item">
               <i class="bi bi-people"></i>
-              <span data-purecounter-start="0" data-purecounter-end="2" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="1" data-purecounter-duration="1" class="purecounter"></span>
               <p><strong>Hard Workers</strong></p>
             </div>
           </div><!-- End Stats Item -->
@@ -390,7 +398,7 @@
                 <img src="assets/img/Ahsan/portfolio/Screenshot 2024-07-03 153427.png" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Primeliste Website</h4>
-                  <p>PRIMELISTE Move Faster (Property management)</p>
+                  <p>ASP.NET MVC Framework <br><Small>(Property management)</Small></p>
                   <a href="assets/img/Ahsan/portfolio/Primeliste - staging.primeliste.com.png" target="_blank" title="Show large" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="https://staging.primeliste.com/" target="_blank" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
@@ -402,7 +410,7 @@
                 <img src="assets/img/Ahsan/portfolio/primeadmin.png" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Primeliste Admin Panel</h4>
-                  <p>(Property management)</p>
+                  <p>ASP.NET MVC Framework <br><Small>(Property management)</Small></p>
                   <a href="assets/img/Ahsan/portfolio/admindash.png" target="_blank" title="Show large" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="https://staging.primeliste.com/admin" target="_blank" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
@@ -411,11 +419,11 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <div class="portfolio-content h-100">
-                <img src="assets/img/Ahsan/portfolio/endpedocidebanner.png" class="img-fluid" alt="">
+                <img src="assets/img/Ahsan/portfolio/endpedocide.png" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>EndPedocide Web</h4>
-                  <p>React + Vite (Front-End)</p>
-                  <a href="assets/img/Ahsan/portfolio/endpedocide.png" target="_blank" title="Show large" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <p>React + Vite (Front-End) <br><small>Donation & Charity Site</small></p>
+                  <a href="assets/img/Ahsan/portfolio/endpedociedimage.png" target="_blank" title="Show large" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="https://end-pedocide.vercel.app/" target="_blank" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
@@ -423,12 +431,25 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <div class="portfolio-content h-100">
-                <img src="assets/img/Ahsan/portfolio/Screenshot 2024-07-04 180544.png" class="img-fluid" alt="">
+                <img src="assets/img/Ahsan/portfolio/My-Business-Shower.png" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>Angular + ASP.NET</h4>
-                  <p>Theme Integration + CRUD using API's + MUI Icon + observable + Service + Auth </p>
-                  <a href="assets/img/Ahsan/portfolio/FireShot Capture 009 - ThemeIntegartion - localhost.png" target="_blank" title="Show large" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <!-- <a href="https://localhost:44345/" target="_blank" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a> -->
+                  <h4>My Business Shower</h4>
+                  <p>APS.NET MVC Framework <br><small>Donation & Charity Site</small></p>
+                  <a href="assets/img/Ahsan/portfolio/mybusinessshower.png" target="_blank" title="Show large" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="https://mybusinessshower.co.uk/" target="_blank" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                </div>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
+              <div class="portfolio-content h-100">
+                <img src="assets/img/Ahsan/portfolio/EarthCo.png" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>EarthCo</h4>
+                  <p>Front-End (React.js) <br> Back-End (ASP.NET Web API)</p>
+                  <a href="assets/img/Ahsan/portfolio/earthcolandscap.png" target="_blank" title="Show large" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="https://app.earthcoapp.com/" target="_blank" title="More Details About Front-End" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="https://api.earthcoapp.com//" target="_blank" title="More Details About Back-End" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -438,13 +459,27 @@
                 <img src="assets/img/Ahsan/portfolio/admin.png" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Admin Panel</h4>
-                  <p>Localhost project (My Demo Project)</p>
+                  <p>ASP.NET Core<br><Small>Localhost project (My Demo Project)</Small></p>
                   <a href="assets/img/Ahsan/portfolio/Department - Eazisols - localhost.png" target="_blank" title="Show large" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <!-- <a href="https://localhost:44345/" target="_blank" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a> -->
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
   
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
+              <div class="portfolio-content h-100">
+                <img src="assets/img/Ahsan/portfolio/angularbanner.png" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>Angular + ASP.NET Web API</h4>
+                  <p>Theme Integration + CRUD using API's + MUI Icon + observable + Service + Auth </p>
+                  <a href="assets/img/Ahsan/portfolio/FireShot Capture 009 - ThemeIntegartion - localhost.png" target="_blank" title="Show large" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <!-- <a href="https://localhost:44345/" target="_blank" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a> -->
+                </div>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+           
             
 
           </div><!-- End Portfolio Container -->
