--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       </ul>
 
       <Ul>
-        <li class="bg-warning text-center rounded-2">Last Update: 26 August 2024</li>
+        <li class="bg-warning text-center rounded-2">Last Update: 27 August 2024</li>
       </Ul>
     </nav>
 
@@ -465,7 +465,18 @@
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
-  
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
+              <div class="portfolio-content h-100">
+                <img src="assets/img/Ahsan/portfolio/Home-Page-AhsanBlogs.png" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>Blog Site</h4>
+                  <p>ASP.NET Core (Using Repository Pattern)<br><Small>Localhost project (My Blog Project)</Small></p>
+                  <a href="assets/img/Ahsan/portfolio/Untitled-document-Google-Docs.png" target="_blank" title="Show large" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <!-- <a href="https://localhost:44345/" target="_blank" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a> -->
+                </div>
+              </div>
+            </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <div class="portfolio-content h-100">
@@ -478,9 +489,6 @@
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
-
-           
-            
 
           </div><!-- End Portfolio Container -->
 
