--- a/index.html
+++ b/index.html
@@ -387,114 +387,9 @@
         <p>In my intensive journey as an ASP.NET developer, I've gained a strong grasp of web application development using the ASP.NET framework, React, and Angular. I am enthusiastic about contributing to dynamic projects and continuously expanding my web development skills.</p>
       </div><!-- End Section Title -->
 
-      <div class="container">
-
-        <div class="isotope-layout" data-default-filter="*" data-layout="masonry" data-sort="original-order">
-          
-          <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
-
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
-              <div class="portfolio-content h-100">
-                <img src="assets/img/Ahsan/portfolio/Screenshot 2024-07-03 153427.png" class="img-fluid" alt="">
-                <div class="portfolio-info">
-                  <h4>Primeliste Website</h4>
-                  <p>ASP.NET MVC Framework <br><Small>(Property management)</Small></p>
-                  <a href="assets/img/Ahsan/portfolio/Primeliste - staging.primeliste.com.png" target="_blank" title="Show large" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="https://staging.primeliste.com/" target="_blank" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-                </div>
-              </div>
-            </div><!-- End Portfolio Item -->
-
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
-              <div class="portfolio-content h-100">
-                <img src="assets/img/Ahsan/portfolio/primeadmin.png" class="img-fluid" alt="">
-                <div class="portfolio-info">
-                  <h4>Primeliste Admin Panel</h4>
-                  <p>ASP.NET MVC Framework <br><Small>(Property management)</Small></p>
-                  <a href="assets/img/Ahsan/portfolio/admindash.png" target="_blank" title="Show large" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="https://staging.primeliste.com/admin" target="_blank" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-                </div>
-              </div>
-            </div><!-- End Portfolio Item -->
-
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
-              <div class="portfolio-content h-100">
-                <img src="assets/img/Ahsan/portfolio/endpedocide.png" class="img-fluid" alt="">
-                <div class="portfolio-info">
-                  <h4>EndPedocide Web</h4>
-                  <p>React + Vite (Front-End) <br><small>Donation & Charity Site</small></p>
-                  <a href="assets/img/Ahsan/portfolio/endpedociedimage.png" target="_blank" title="Show large" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="https://end-pedocide.vercel.app/" target="_blank" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-                </div>
-              </div>
-            </div><!-- End Portfolio Item -->
-
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
-              <div class="portfolio-content h-100">
-                <img src="assets/img/Ahsan/portfolio/My-Business-Shower.png" class="img-fluid" alt="">
-                <div class="portfolio-info">
-                  <h4>My Business Shower</h4>
-                  <p>APS.NET MVC Framework <br><small>Donation & Charity Site</small></p>
-                  <a href="assets/img/Ahsan/portfolio/mybusinessshower.png" target="_blank" title="Show large" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="https://mybusinessshower.co.uk/" target="_blank" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-                </div>
-              </div>
-            </div><!-- End Portfolio Item -->
-
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
-              <div class="portfolio-content h-100">
-                <img src="assets/img/Ahsan/portfolio/EarthCo.png" class="img-fluid" alt="">
-                <div class="portfolio-info">
-                  <h4>EarthCo</h4>
-                  <p>Front-End (React.js) <br> Back-End (ASP.NET Web API)</p>
-                  <a href="assets/img/Ahsan/portfolio/earthcolandscap.png" target="_blank" title="Show large" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="https://app.earthcoapp.com/" target="_blank" title="More Details About Front-End" class="details-link"><i class="bi bi-link-45deg"></i></a>
-                  <a href="https://api.earthcoapp.com//" target="_blank" title="More Details About Back-End" class="details-link"><i class="bi bi-link-45deg"></i></a>
-                </div>
-              </div>
-            </div><!-- End Portfolio Item -->
-
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
-              <div class="portfolio-content h-100">
-                <img src="assets/img/Ahsan/portfolio/admin.png" class="img-fluid" alt="">
-                <div class="portfolio-info">
-                  <h4>Admin Panel</h4>
-                  <p>ASP.NET Core<br><Small>Localhost project (My Demo Project)</Small></p>
-                  <a href="assets/img/Ahsan/portfolio/Department - Eazisols - localhost.png" target="_blank" title="Show large" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <!-- <a href="https://localhost:44345/" target="_blank" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a> -->
-                </div>
-              </div>
-            </div><!-- End Portfolio Item -->
-
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
-              <div class="portfolio-content h-100">
-                <img src="assets/img/Ahsan/portfolio/Home-Page-AhsanBlogs.png" class="img-fluid" alt="">
-                <div class="portfolio-info">
-                  <h4>Blog Site</h4>
-                  <p>ASP.NET Core (Using Repository Pattern)<br><Small>Localhost project (My Blog Project)</Small></p>
-                  <a href="assets/img/Ahsan/portfolio/Untitled-document-Google-Docs.png" target="_blank" title="Show large" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <!-- <a href="https://localhost:44345/" target="_blank" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a> -->
-                </div>
-              </div>
-            </div><!-- End Portfolio Item -->
-
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
-              <div class="portfolio-content h-100">
-                <img src="assets/img/Ahsan/portfolio/angularbanner.png" class="img-fluid" alt="">
-                <div class="portfolio-info">
-                  <h4>Angular + ASP.NET Web API</h4>
-                  <p>Theme Integration + CRUD using API's + MUI Icon + observable + Service + Auth </p>
-                  <a href="assets/img/Ahsan/portfolio/FireShot Capture 009 - ThemeIntegartion - localhost.png" target="_blank" title="Show large" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <!-- <a href="https://localhost:44345/" target="_blank" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a> -->
-                </div>
-              </div>
-            </div><!-- End Portfolio Item -->
-
-          </div><!-- End Portfolio Container -->
-
-        </div>
-
-      </div>
+     <div class="container">
+      <h3 class="text-center">COMING SOON</h3>
+     </div>
 
     </section><!-- /Portfolio Section -->
 
