--- a/index.html
+++ b/index.html
@@ -91,7 +91,17 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>About</h2>
+        <div class="row">
+          <div class="col-sm-6 col-md-6 col-lg-6">
+            <h2>About</h2>
+          </div>
+          <div class="col-sm-6 col-md-6 col-lg-6" style="text-align: right;">
+            <a href="./assets/CV/ahsan.pdf" download="AhsanResume.pdf" class="btn btn-primary btn-sm" style="background-color: var(--accent-color); color: aliceblue;">
+              Download Resume
+            </a>
+          </div>
+        </div>
+
         <p>Highly motivated and dedicated <b>Full-Stack .NET Developer</b> with 2 years of hands-on experience in creating robust, scalable, and user-friendly web applications using the .NET framework. Proficient in backend technologies such as <b>ASP.NET MVC, Entity Framework, Core, Web API, and Razor Pages</b>, along with programming languages including C, C++, C#, and OOP. Skilled in database design, optimization, and integration using MS SQL Server. Adept at frontend development using modern technologies like <b>HTML, CSS, JavaScript, jQuery, Ajax, React.js, and Angular</b>. Passionate about delivering innovative solutions, collaborating effectively within teams, and continuously improving technical expertise to meet the demands of modern web development.</p>
       </div><!-- End Section Title -->
 
@@ -399,7 +409,17 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Portfolio</h2>
+        <div class="row">
+          <div class="col-sm-6 col-md-6 col-lg-6">
+            <h2>Portfolio</h2>
+          </div>
+          <div class="col-sm-6 col-md-6 col-lg-6" style="text-align: right;">
+            <a href="./assets/CV/ahsan.pdf" download="AhsanResume.pdf" class="btn btn-primary btn-sm" style="background-color: var(--accent-color); color: aliceblue;">
+              Download Resume
+            </a>
+          </div>
+        </div>
+        
         <p>In my intensive journey as an ASP.NET developer, I've gained a strong grasp of web application development using the ASP.NET framework, React, and Angular. I am enthusiastic about contributing to dynamic projects and continuously expanding my web development skills.</p>
       </div><!-- End Section Title -->
 
