--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             <img src="assets/img/Ahsan/IMG-20240630-WA0068(1).jpg" class="img-fluid rounded-2" alt="">
           </div>
           <div class="col-lg-8 content">
-            <h2>ASP.NET, React & Angular Developer</h2>
+            <h2>ASP.NET, Next.js, React.js & Angular Developer</h2>
             <p class="fst-italic py-3">
               I am Ahsan Shafique, and I am a .NET developer with a passion for creating web applications. Additionally, I am skilled in React and Angular, with a passion for creating web applications and solutions using the .NET framework, React, and Angular.
             </p>
