--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <a href="https://www.instagram.com/ahsanshafique98/" target="_blank" class="instagram" title="Instagram"><i class="bi bi-instagram"></i></a>
       <!-- <a href="#" class="google-plus"><i class="bi bi-skype"></i></a> -->
       <a href="https://www.linkedin.com/in/ahsan-shafique-dev/" target="_blank" class="linkedin" title="Linkedin"><i class="bi bi-linkedin"></i></a>
-      <a href="./assets/CV/ahsan.pdf" download="AhsanResume.pdf" target="_blank" class="" title="Resume/CV"><i class="bi bi-arrow-down-circle"></i></a>
+      <!-- <a href="./assets/CV/ahsan.pdf" download="AhsanResume.pdf" target="_blank" class="" title="Resume/CV"><i class="bi bi-arrow-down-circle"></i></a> -->
     </div>
 
     <nav id="navmenu" class="navmenu">
