--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <!-- Hero Section -->
     <section id="hero" class="hero section dark-background">
 
-      <img src="assets/img/Ahsan/IMG_8837.JPG" alt="" data-aos="fade-in" class="">
+      <img src="assets/img/Ahsan/cover.jpg" alt="" data-aos="fade-in" class="">
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <h2>Ahsan Shafique</h2>
