--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <h2>Ahsan Shafique</h2>
-        <p class="ms-3">I'm <span class="typed" data-typed-items=" Full Stack Web Developer, ASP.NET Developer, React Developer, Angular Developer"></span></p>
+        <p class="ms-3">I'm <span class="typed" data-typed-items=" Full Stack Web Developer, ASP.NET Developer, Next.js Developer, React.js Developer, Angular Developer"></span></p>
       </div>
 
     </section><!-- /Hero Section -->
