--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 <body class="index-page">
 
-  <header id="header" class="header dark-background d-flex flex-column">
+  <header id="header" class="header d-flex flex-column" style="background-color: #1a4e70;">
     <i class="header-toggle d-xl-none bi bi-list"></i>
 
     <div class="profile-img">
